--- a/config.ini
+++ b/config.ini
@@ -2,7 +2,8 @@
 # path with all the data directly from sources, should be linked directly to the website in the future
 ;data_source = C:\Users\ADMrechbay20\Documents\data
 ;data_source = C:\Users\ADMrechbay20\Documents\data\LAB
-data_source = C:\Users\ADMrechbay20\Documents\data_prototype
+;data_source = C:\Users\ADMrechbay20\Documents\data_prototype
+data_source = C:\Users\ADMrechbay20\Documents\experimentation\data
 #path of natural earth
 #countries_path2 = C:\Users\ADMrechbay20\Documents\110m_cultural\ne_110m_admin_0_countries.shp
 countries_path = C:\Users\ADMrechbay20\Documents\gadm_410-gpkg\gadm_410.gpkg
